# rs_media_probe_worker

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
examples/: with_destination_path.json  with_destination_path_and_result_in_logs.json  without_destination_path.json
src/: main.rs  message.rs
tests/: result.json
