[package]
name = "rs_media_probe_worker"
version = "0.1.4"
authors = ["Valentin NOEL <valentin.noel@media-io.com>"]
edition = "2018"

[dependencies]
log = "0.4"
mcai_worker_sdk = "0.11.11"
schemars = "0.8.0"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
stainless_ffmpeg = { git = "https://github.com/nomalab/stainless-ffmpeg.git", branch = "master" }
